# vaultura

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  security.yml
Formula/: vaultura.rb
src/: error.rs  lib.rs  main.rs
src/clipboard/: mod.rs
src/config/: mod.rs
src/core/: mod.rs  models.rs  password_generator.rs  vault_service.rs
src/crypto/: aead.rs  kdf.rs  mod.rs
src/storage/: format.rs  mod.rs  vault_file.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/modals/: confirm_dialog.rs  group_form.rs  item_form.rs  mod.rs  password_generator_modal.rs
src/ui/panels/: details_panel.rs  groups_panel.rs  items_panel.rs  mod.rs
src/ui/screens/: lock_screen.rs  main_screen.rs  mod.rs
